--- a/src/assets/css/main_pc.less
+++ b/src/assets/css/main_pc.less
@@ -389,3 +389,15 @@ section {
     max-width: inherit;
   }
 }
+
+.section__main--serprise02 {
+  .product__item:nth-child(4n) {
+    margin-right: 0;
+  }
+  .product__container {
+    max-width: 288px;
+  }
+  // .product__thumb {
+  //   max-width: 288px;
+  // }
+}
