--- a/src/components/layout/footer_pc/index.html
+++ b/src/components/layout/footer_pc/index.html
@@ -1,84 +1,123 @@
 <footer class="layout-footer">
-  <div class="layout-footer_inner">
 
-    <div class="layout-footer__top">
-      <ul class="layout-footer__container">
-        <li class="layout-footer__item">
-          <a class="layout-footer__link" href="#">
-            company
-          </a>
-        </li>
-        <li class="layout-footer__item">
-          <a class="layout-footer__link" href="#">
-            private policy
-          </a>
-        </li>
-        <li class="layout-footer__item">
-          <a class="layout-footer__link" href="#">
-            membership
-          </a>
-        </li>
-        <li class="layout-footer__item">
-          <a class="layout-footer__link" href="#">
-            customer
-          </a>
-        </li>
-      </ul>
+  <div class="layout-footer__menu">
+    <ul class="layout-footer__container">
+      <li class="layout-footer__item">
+        <a class="layout-footer__link" href="#">
+          아리따움 소개
+        </a>
+      </li>
+      <li class="layout-footer__item">
+        <a class="layout-footer__link" href="#">
+          가맹점 개설문의
+        </a>
+      </li>
+      <li class="layout-footer__item">
+        <a class="layout-footer__link" href="#">
+          사회공헌 활동
+        </a>
+      </li>
+      <li class="layout-footer__item">
+        <a class="layout-footer__link" href="#">
+          사이트 이용약관
+        </a>
+      </li>
+      <li class="layout-footer__item">
+        <a class="layout-footer__link" href="#">
+          개인정보 처리방침
+        </a>
+      </li>
+      <li class="layout-footer__item">
+        <a class="layout-footer__link" href="#">
+          시스템 오류신고
+        </a>
+      </li>
+      <li class="layout-footer__item">
+        <a class="layout-footer__link" href="#">
+          공지사항&amp;고객센터
+        </a>
+      </li>
+    </ul>
 
-      <ul class="layout-footer__container sns">
-        <li class="layout-footer__item">
-          <a class="layout-footer__link" href="#">
-            <img src="@@webRoot/assets/images/footer/pc_ico_sns_fb.jpg" alt="">
-          </a>
-        </li>
-        <li class="layout-footer__item">
-          <a class="layout-footer__link" href="#">
-            <img src="@@webRoot/assets/images/footer/pc_ico_sns_instar.jpg" alt="">
-          </a>
-        </li>
-        <li class="layout-footer__item">
-          <a class="layout-footer__link" href="#">
-            <img src="@@webRoot/assets/images/footer/pc_ico_sns_what.jpg" alt="">
-          </a>
-        </li>
-      </ul>
-    </div>
-    <div class="layout-footer__bot">
-      <div class="layout-footer__left">
-        <p class="left_txt">
-          서울특별시 서초구 서초대로 38길 12 (서초동, 마제스타시트 타워원 13층)
-        </p>
-        <p class="left_txt">
-          대표 : 이세훈｜사업자 등록번호 : 119-1-34685｜통신판매 신고번호 : 제 2002-00018호｜개인정보 보호책임자 : 신현철
-        </p>
-        <p class="left_txt">
-          <a href="tel:080-080-4936">Tel : 080-080-4936</a> ｜Fax : 02-6292-6894｜e-mail : <a
-            href="mailto:cs@beautynet.co.kr">cs@beautynet.co.kr</a>, <a
-            href="mailto:webmaster@beautynet.co.kr">webmaster@beautynet.co.kr</a>
-        </p>
-        <p class="left_txt">
-          서울특별시 서초구 서초대로 38길 12 (서초동, 마제스타시트 타워원 13층)
-        </p>
 
-        <p class="left_txt lt1">
-          안전거래를 위해 (주)이니시스의 구매안전(에스크로)에 가입하여 서비스를 제공하고있습니다. <a class="signup_check" href="">가입확인</a>
-        </p>
+    <ul class="layout-footer__container sns">
+      <li class="layout-footer__item">
+        <a class="layout-footer__link" href="#">
+          <i class="sprite-icon sprite-icon-fb"></i>
+        </a>
+      </li>
+      <li class="layout-footer__item">
+        <a class="layout-footer__link" href="#">
+          <i class="sprite-icon sprite-icon-instar"></i>
+        </a>
+      </li>
+      <li class="layout-footer__item">
+        <a class="layout-footer__link" href="#">
+          <i class="sprite-icon sprite-icon-youtube"></i>
+        </a>
+      </li>
+      <li class="layout-footer__item">
+        <a class="layout-footer__link" href="#">
+          <i class="sprite-icon sprite-icon-what01"></i>
+        </a>
+      </li>
+      <li class="layout-footer__item">
+        <a class="layout-footer__link" href="#">
+          <i class="sprite-icon sprite-icon-what02"></i>
+        </a>
+      </li>
+    </ul>
 
-        <p class="copyright">ⓒ COPYRIGHT ABLE C&C ALL RIGHT RESERVED.</p>
-
+    <address>
+      <div class="address__footer address__footer--1f">
+        <div class="footer__1f footer__1f--section1">
+          <p class="footer__info">
+            (주)아모레퍼시픽 대표이사 : 서경배
+          </p>
+          <p class="footer__info">
+            서울특별시 용산구 한강대로 100 (한강로 2가)
+          </p>
+          <p class="footer__info">
+            서울특별시 용산구 한강대로 100 (한강로 2가)
+          </p>
+          <a class="addon" href="">사업자 정보확인</a>
+        </div>
+        <div class="footer__1f footer__1f--section2">
+          <p class="footer__info">
+            통신판매업신고번호 : 2017-서울용산-1308호 / 건강기능식품판매업 영업신고증 제8호
+          </p>
+          <p class="footer__info">
+            고객상담 : (온라인) 080-555-6006 (제품문의 및 매장 문의) : 080-023-5454
+          </p>
+        </div>
+        <div class="footer__1f footer__1f--section3">
+          <p class="footer__info">
+            <a href="mailto:support@aritaum.com">이메일주소 : support@aritaum.com</a>
+          </p>
+          <p class="footer__info">
+            개인정보 관리 책임자 : 김진우
+          </p>
+          <p class="footer__info">
+            호스팅 제공자 : (주)아모레퍼시픽
+          </p>
+        </div>
       </div>
-      <div class="layout-footer__right">
-        <span class="right_txt"><a href="">회원약관</a></span>
-        <span class="right_txt"><a href="">멤버십 이용약관</a></span>
-        <span class="right_txt"><a href="">고객센터</a></span>
-        <span class="right_txt"><a href="">사이트맵</a></span>
-        <span class="right_txt"><a href="">가맹점문의</a></span>
-        <span class="right_txt"><a href="">- 미샤</a></span>
-        <span class="right_txt"><a href="">- 어표</a></span>
+      <div class="address__footer address__footer--2f">
+        <p class="footer__info">(주)이니시스 구매안전서비스 고객님의 안전거래를 위해 현금 거래에 대해 이니페이 에스크로서비스를 이용하실 수 있습니다.</p>
+        <p class="footer__info">
+          <a href="#none">서비스 가입사실 확인</a>
+        </p>
       </div>
-    </div>
-
-
-
+      <div class="address__footer address__footer--3f">
+        플라잉, 뷰티테이크아웃 배송 서비스에 대해 아리따움닷컴은 통신판매 중개시스템의 제공자로서, 통신판매의 당사자가 아닙니다.<br />
+        따라서 해당 서비스 거래에 대한 주문, 환불등의 관련한 책임은 각 매장에 있습니다.
+      </div>
+      <div class="address__footer address__footer--4f">
+        아리따움의 모든 고객은 월 100만원(라네즈 글로벌 상품 월 50만원)/연 300만원 내에서 할인 혜택을 받을 수 있습니다. (온/오프라인 합산)
+      </div>
+      <div class="copyright">
+        AMOREPACIFIC CORPORATION. ALL RIGHTS RESERVED.
+      </div>
+    </address>
   </div>
 </footer>
