--- a/src/assets/css/footer_pc.less
+++ b/src/assets/css/footer_pc.less
@@ -1,6 +1,7 @@
 .layout-footer {
+  margin: 180px 0 60px;
   position: relative;
-  background: #fafafa;
+  background: #fff;
   width: 100%;
 }
 .layout-footer_inner {
@@ -10,27 +11,20 @@
   font-family: 'NanumBarunGothic';
 }
 
-.layout-footer__top {
-  &:after {
-    content: '';
-    display: table;
-    clear: both;
-  }
-}
-
-.layout-footer-sns {
-  background: orange;
-}
-
 .layout-footer__container {
-  float: left;
-  opacity: 0.7;
+  border-top: 1px solid #dddddd;
+  border-bottom: 1px solid #eeeeee;
+  display: flex;
+  justify-content: center;
+  padding: 30px 0;
+  // justify-content: space-between;
 
   &.sns {
-    float: right;
+    // float: right;
+    border: none;
 
     .layout-footer__item {
-      margin-right: 16px;
+      margin-right: 20px;
 
       &:last-child {
         margin-right: 0;
@@ -45,21 +39,81 @@
   }
 }
 
+address {
+  text-align: center;
+}
+.address__footer {
+  margin: auto;
+  width: 1000px;
+}
+
+.address__footer--2f,
+.address__footer--3f,
+.address__footer--4f,
+.copyright {
+  color: #999999;
+  margin-top: 28px;
+}
+
+.address__footer--3f {
+  line-height: 19px;
+}
+
+.footer__1f {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+
+  &:first-child {
+    margin-top: 0;
+  }
+}
+
+.footer__info {
+  position: relative;
+  font-size: 12px;
+  line-height: 13px;
+  letter-spacing: -0.025em;
+  color: #999999;
+  margin-right: 20px;
+
+  a {
+    display: inline-block;
+  }
+
+  &:last-child {
+    margin-right: 0;
+
+    &:after {
+      display: none;
+    }
+  }
+
+  &:after {
+    content: '|';
+    display: inline;
+    margin-left: 20px;
+  }
+}
+
 .layout-footer__item {
-  float: left;
-  margin-right: 40px;
+  margin-right: 16px;
+  color: #666666;
 
   &:last-child {
     margin-right: 0;
   }
-  // width: 40px;
 }
 
 .layout-footer__link {
+  color: #666666;
+  font-family: '맑음 고딕';
   width: 100%;
   display: block;
   text-transform: uppercase;
   font-size: 14px;
+  line-height: 13px;
+  letter-spacing: -0.025em;
   font-weight: 600;
 
   img {
@@ -72,73 +126,20 @@
   padding-bottom: 40px;
 }
 
-.layout-footer__logo {
-  .layout-footer__link {
-    display: block;
-    width: 113px;
-    margin: 0 auto;
-  }
-
-  img {
-    width: 100%;
-  }
-}
-
-.layout-footer__bot {
-  margin-top: 50px;
-
-  &:after {
-    content: '';
-    display: table;
-    clear: both;
-  }
-
-  .layout-footer__left {
-    width: 60%;
-    float: left;
-    line-height: 23px;
-
-    .left_txt {
-      opacity: 0.7;
-      font-weight: 600;
-      font-size: 13px;
-      line-height: 23px;
-      // margin-bottom: 10px;
-
-      &.lt1 {
-        margin-top: 40px;
-      }
+.address__footer--2f {
+  display: flex;
+  justify-content: center;
+  .footer__info:first-child {
+    &:after {
+      display: none;
     }
   }
-  .layout-footer__right {
-    width: 15%;
-    float: right;
-    line-height: 26px;
-    opacity: 0.7;
-
-    .right_txt {
-      letter-spacing: 0.02em;
-      line-height: 26px;
-      font-weight: 600;
-      font-size: 13px;
-      margin-bottom: 8px;
-      text-align: right;
-      display: block;
-
-      &:last-child {
-        margin-bottom: 0;
-      }
-    }
-  }
-}
-
-.signup_check {
-  text-decoration: underline;
 }
 
 .copyright {
-  line-height: 48px;
-  padding: 44px 0 54px;
-  font-size: 13px;
+  line-height: 13px;
+  font-size: 12px;
+  letter-spacing: -0.025;
+  // padding: 44px 0 54px;
   color: #999999;
 }
