--- a/src/assets/css/main_pc.less
+++ b/src/assets/css/main_pc.less
@@ -14,8 +14,19 @@
 .more__btn {
   width: 100%;
 
+  &:focus {
+    display: none;
+  }
+
   .sprite-icon {
     margin: 60px auto;
+  }
+
+  &.more__btn--link {
+    margin: 60px auto;
+    background: url('../images/common/link_event.jpg') no-repeat 50% 50%;
+    width: 100%;
+    height: 80px;
   }
 }
 
@@ -70,6 +81,9 @@
 
   &.product__list--wrap {
     flex-wrap: wrap;
+  }
+  &.product__list--space_between {
+    justify-content: space-between;
   }
 }
 
@@ -134,6 +148,50 @@
   }
 }
 
+//box__layout
+.box__layout {
+  &.box__layout--reverse {
+    flex-direction: row-reverse;
+  }
+  &--between {
+    display: flex;
+
+    .layout__container {
+      position: relative;
+      width: 50%;
+    }
+    .box__link {
+      position: absolute;
+      top: 204px;
+      left: 50%;
+      transform: translateX(-50%);
+      font-family: '맑은 고딕';
+      padding: 7px 0;
+      color: #fff;
+      border: 1px solid transparent;
+      background: #ee2d7a;
+      width: 140px;
+      text-align: center;
+      font-size: 16px;
+      font-weight: bold;
+      line-height: 26px;
+      letter-spacing: -0.05em;
+      border-radius: 30px;
+      transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+
+      &:hover {
+        color: #ee2d7a;
+        background: #fff;
+      }
+    }
+    .layout__container--img {
+      background-repeat: no-repeat;
+      background-position: 50% 50%;
+      // background-size: cover;
+    }
+  }
+}
+
 //박스 스타일
 .box__list {
   display: flex;
@@ -186,11 +244,6 @@
   &.box__item--reverse {
     display: flex;
     flex-direction: column-reverse;
-    .box__thumb {
-    }
-    .box__info {
-      // order: -1;
-    }
   }
 }
 
@@ -217,6 +270,7 @@ section {
   }
 
   .swiper-button-prev {
+    cursor: pointer;
     z-index: 100;
     position: absolute;
     top: 50%;
@@ -227,11 +281,16 @@ section {
     transition: left 0.4s cubic-bezier(0.87, 0, 0.13, 1);
     // background: url("../images/");
 
+    &:focus {
+      display: none;
+    }
+
     &.swiper-button-disabled {
       left: -50px;
     }
   }
   .swiper-button-next {
+    cursor: pointer;
     z-index: 100;
     position: absolute;
     top: 50%;
@@ -240,6 +299,9 @@ section {
     height: 50px;
     transform: translateY(-50%);
     transition: right 0.4s cubic-bezier(0.87, 0, 0.13, 1);
+    &:focus {
+      display: none;
+    }
 
     &.swiper-button-disabled {
       right: -50px;
@@ -348,8 +410,30 @@ section {
     height: 38px;
     background: url('../images/main/pc/module06/module05_zig_top.png') no-repeat 50% 50%;
   }
+  &:before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 38px;
+    transform: rotate(180deg);
+    background: url('../images/main/pc/module06/module05_zig_top.png') no-repeat 50% 50%;
+  }
   .box__recommend {
     background: #eee;
+
+    .box__recommend--article {
+      padding-top: 60px;
+
+      &:first-child {
+        padding-top: 0;
+      }
+
+      &:last-child {
+        padding-bottom: 140px;
+      }
+    }
 
     &--reverse {
       .section__inner--flex {
@@ -378,6 +462,9 @@ section {
         left: inherit;
         right: 188px;
       }
+    }
+
+    .box__recommend--card-list--solo {
     }
   }
 
@@ -468,6 +555,30 @@ section {
   .product__container {
     background: #fff;
   }
+
+  .layout__container--img {
+    &.img01 {
+      background-image: url('../images/main/pc/module06/module06_product_07_bg.jpg');
+    }
+    &.img02 {
+      background-image: url('../images/main/pc/module06/module06_product_08_bg.jpg');
+    }
+  }
+  .layout__container--swiper {
+    background: #fff;
+  }
+  .layout__container--swiper02 {
+    background: #60b0d2;
+
+    .main-card-swiper--solo {
+      margin: 116px 80px;
+      -webkit-box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.91);
+      box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.91);
+    }
+  }
+  .main-card-swiper--solo {
+    margin: 30px 120px 60px;
+  }
 }
 
 .section__main--serprise02 {
@@ -552,11 +663,117 @@ section {
     display: flex;
   }
   .sale__container--left {
+    padding-top: 60px;
+    padding-bottom: 80px;
+    text-align: center;
     width: 50%;
     background: #ee2d7a;
   }
   .sale__container--right {
+    position: relative;
+    padding-top: 60px;
     width: 50%;
-    
+    background: #f2f2f2;
+
+    &:after {
+      content: '';
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      background: url('../images/main/pc/module10/bg_arrow.png') no-repeat 50% 50%;
+      width: 40px;
+      height: 204px;
+    }
+  }
+  .sale__title {
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 22px;
+    color: #fff;
+  }
+  .sale__count {
+    margin-top: 20px;
+    font-size: 50px;
+    font-weight: 600;
+    line-height: 22px;
+    color: #fff;
+  }
+  .sale__desc {
+    margin: 70px auto 0;
+    max-width: 340px;
+    font-size: 30px;
+    font-weight: normal;
+    color: #fff;
+    line-height: 40px;
+  }
+  .product__box {
+    margin: 70px auto 0;
+  }
+  .product__container {
+    padding-bottom: 30px;
+    background: #fff;
+  }
+  .product__item {
+    margin-right: 0;
+  }
+
+  .info__title--brand,
+  .info__title--desc {
+    color: #000;
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: bold;
+    letter-spacing: -0.05em;
+  }
+  .info__title--desc {
+    font-weight: lighter;
+  }
+
+  .takeout {
+    width: auto;
+
+    .product__thumb {
+      margin: 17px auto 0;
+      width: 360px;
+    }
+    .product__container {
+      background: #f2f2f2;
+    }
+  }
+  .product__info--top {
+    .info__title--brand {
+      color: #999999;
+      font-size: 16px;
+      font-weight: lighter;
+      line-height: 30px;
+      letter-spacing: -0.05em;
+    }
+    .info__title--desc {
+      font-size: 16px;
+      font-weight: normal;
+      line-height: 22px;
+      letter-spacing: -0.05em;
+    }
+  }
+  .product__info--bot {
+    .info__title--brand {
+      // color: #999999;
+      font-size: 16px;
+      font-weight: lighter;
+      line-height: 24px;
+      letter-spacing: 0;
+    }
+    .info__title--desc {
+      font-size: 16px;
+      font-weight: normal;
+      line-height: 22px;
+      letter-spacing: -0.05em;
+    }
+  }
+  .info__price--origin {
+    &:after {
+      content: '원';
+      display: inline;
+    }
   }
 }
