--- a/src/assets/css/swiper.less
+++ b/src/assets/css/swiper.less
@@ -1,34 +1,34 @@
 .swiper-container {
-    margin: 0 auto;
-    position: relative;
-    overflow: hidden;
-    list-style: none;
-    padding: 0;
-    /* Fix of Webkit flickering */
-    z-index: 1;
-  }
-  .swiper-container-no-flexbox .swiper-slide {
-    float: left;
-  }
-  .swiper-container-vertical > .swiper-wrapper {
-    flex-direction: column;
-  }
-  .swiper-wrapper {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    display: flex;
-    transition-property: transform;
-    box-sizing: content-box;
-  }
+  margin: 0 auto;
+  position: relative;
+  overflow: hidden;
+  list-style: none;
+  padding: 0;
+  /* Fix of Webkit flickering */
+  z-index: 1;
+}
+.swiper-container-no-flexbox .swiper-slide {
+  float: left;
+}
+.swiper-container-vertical > .swiper-wrapper {
+  flex-direction: column;
+}
+.swiper-wrapper {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  display: flex;
+  transition-property: transform;
+  box-sizing: content-box;
+}
 
-  .swiper-container-android .swiper-slide,
+.swiper-container-android .swiper-slide,
 .swiper-wrapper {
   transform: translate3d(0px, 0, 0);
 }
 .swiper-container-multirow > .swiper-wrapper {
-//   flex-wrap: wrap;
+  //   flex-wrap: wrap;
 }
 .swiper-container-free-mode > .swiper-wrapper {
   transition-timing-function: ease-out;
@@ -43,34 +43,59 @@
 }
 
 .full--swiper {
-    img {
-        width: 100%;
-    }
+  img {
+    width: 100%;
+  }
 
-    .slide-link {
-        display: block;
-    }
+  .slide-link {
+    display: block;
+  }
 
-
-.slide-title-container {
-     position: absolute;
-     top: 230px;
-     left: 50%;
-     transform: translateX(-50%);
-     width: 100%;
-}   
-.slide-title--item {
+  .slide-title-container {
+    position: absolute;
+    top: 230px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+  }
+  .slide-title--item {
     text-align: center;
     text-transform: uppercase;
     font-size: 45px;
     font-weight: 100;
     color: #fff;
-}
+  }
 
-.subtitle {
+  .subtitle {
     margin-top: 13px;
     font-size: 15px;
+  }
 }
 
+.swiper-pagination {
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  bottom: 50px;
+  height: 14px;
+  width: 100%;
+  z-index: 100;
+  // background: green;
+}
 
+.swiper-pagination .swiper-pagination-bullet {
+  border-radius: 24px;
+  margin-right: 18px;
+  display: block;
+  width: 12px;
+  height: 12px;
+  background: #e5e5e5;
+
+  &:last-child {
+    margin-right: 0;
+  }
+}
+
+.swiper-pagination .swiper-pagination-bullet-active {
+  background: #ee2d7a;
 }
