--- a/src/assets/css/main_pc.less
+++ b/src/assets/css/main_pc.less
@@ -190,6 +190,26 @@
       // background-size: cover;
     }
   }
+  .layout__container {
+    position: relative;
+  }
+  .layout__info {
+    position: absolute;
+  }
+  .layout__title {
+    font-size: 100px;
+    font-weight: 600;
+    line-height: 100px;
+    color: #fff;
+  }
+  .layout__desc {
+    margin: 55px 0;
+    width: 440px;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: -0.05em;
+    color: #fff;
+  }
 }
 
 //박스 스타일
@@ -591,6 +611,27 @@ section {
   // .product__thumb {
   //   max-width: 288px;
   // }
+}
+
+.section__main--visual02 {
+  .layout__container {
+    height: 800px;
+    background: #0b1e60;
+  }
+  .layout__info {
+    top: 166px;
+    left: 305px;
+  }
+  .img01 {
+    background-image: url('../images/main/pc/module07/module07_bg.jpg');
+  }
+  .more__btn--link {
+    margin: 0;
+    width: 150px;
+    height: 38px;
+    background-image: url('../images/main/pc/module07/module07_more.jpg');
+    background-position: 0 0;
+  }
 }
 
 .section__main--best_review {
