--- a/src/components/layout/footer_pc/index.html
+++ b/src/components/layout/footer_pc/index.html
@@ -78,9 +78,11 @@
             서울특별시 용산구 한강대로 100 (한강로 2가)
           </p>
           <p class="footer__info">
-            서울특별시 용산구 한강대로 100 (한강로 2가)
+            사업자등록번호 : 106-86-43373
           </p>
-          <a class="addon" href="">사업자 정보확인</a>
+          <p class="addon">
+            <a href="">사업자 정보확인 <em>▶</em></a>
+          </p>
         </div>
         <div class="footer__1f footer__1f--section2">
           <p class="footer__info">
@@ -104,9 +106,10 @@
       </div>
       <div class="address__footer address__footer--2f">
         <p class="footer__info">(주)이니시스 구매안전서비스 고객님의 안전거래를 위해 현금 거래에 대해 이니페이 에스크로서비스를 이용하실 수 있습니다.</p>
-        <p class="footer__info">
-          <a href="#none">서비스 가입사실 확인</a>
+        <p class="addon" href="#none">
+          <a href="">서비스 가입사실 확인 <em>▶</em></a>
         </p>
+
       </div>
       <div class="address__footer address__footer--3f">
         플라잉, 뷰티테이크아웃 배송 서비스에 대해 아리따움닷컴은 통신판매 중개시스템의 제공자로서, 통신판매의 당사자가 아닙니다.<br />
