--- a/src/assets/css/footer_pc.less
+++ b/src/assets/css/footer_pc.less
@@ -81,18 +81,17 @@ address {
     display: inline-block;
   }
 
+  &:after {
+    content: '|';
+    display: inline;
+    margin-left: 20px;
+  }
   &:last-child {
     margin-right: 0;
 
     &:after {
       display: none;
     }
-  }
-
-  &:after {
-    content: '|';
-    display: inline;
-    margin-left: 20px;
   }
 }
 
@@ -134,6 +133,36 @@ address {
       display: none;
     }
   }
+}
+// .addon {
+//   display: flex;
+//   text-decoration: underline;
+
+//   i {
+//     align-self: center;
+//     margin-left: 6px;
+//   }
+// }
+
+.addon {
+  position: relative;
+  text-decoration: underline;
+
+  em {
+    font-size: 6px;
+    vertical-align: middle;
+  }
+  // a {
+  //   text-decoration: underline;
+
+  //   &:after {
+  //     content: '▶';
+  //     display: inline;
+  //     font-size: 6px;
+  //     padding-left: 6px;
+  //     vertical-align: middle;
+  //   }
+  // }
 }
 
 .copyright {
